Fix overflowing images

--- a/src/styles/features/search.css
+++ b/src/styles/features/search.css
@@ -78,7 +78,8 @@
 
 .search-item > img {
   grid-column: 1;
-  height: 50px;
+  max-height: 100%;
+  max-width: 90%;
 }
 
 .search-item-content {
